manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dwk-project
  name: dwk-project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2345
